# docs/swagger.yaml
@@ -61,6 +61,15 @@ definitions:
     - status
     - username
     type: object
+  request.AdminRoleForm:
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+    required:
+    - name
+    type: object
   request.Login:
     properties:
       password:
@@ -230,6 +239,147 @@ paths:
       summary: 管理员编辑
       tags:
       - 管理员
+  /admin_role/create:
+    post:
+      consumes:
+      - application/json
+      description: 管理员角色创建
+      parameters:
+      - description: 管理员角色
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/request.AdminRoleForm'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - token: []
+      summary: 管理员角色创建
+      tags:
+      - 管理员角色
+  /admin_role/delete:
+    post:
+      consumes:
+      - application/json
+      description: 管理员角色删除
+      parameters:
+      - description: 管理员角色信息
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/model.AdminRole'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - token: []
+      summary: 管理员角色删除
+      tags:
+      - 管理员角色
+  /admin_role/detail/{id}:
+    get:
+      consumes:
+      - application/json
+      description: 管理员角色详情
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - token: []
+      summary: 管理员角色详情
+      tags:
+      - 管理员角色
+  /admin_role/list:
+    get:
+      consumes:
+      - application/json
+      description: 管理员角色列表
+      parameters:
+      - description: 页码
+        in: query
+        name: page
+        type: integer
+      - description: 页大小
+        in: query
+        name: page_size
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - token: []
+      summary: 管理员角色列表
+      tags:
+      - 管理员角色
+  /admin_role/update:
+    post:
+      consumes:
+      - application/json
+      description: 管理员角色编辑
+      parameters:
+      - description: 管理员信息
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/request.AdminRoleForm'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - token: []
+      summary: 管理员角色编辑
+      tags:
+      - 管理员角色
   /login:
     post:
       consumes:
