# http/controller/admin_role.go
@@ -2,109 +2,103 @@ package controller
 
 import (
 	"Gwen/global"
+	"Gwen/model"
 	"Gwen/model/request"
 	"Gwen/model/response"
 	"Gwen/service"
 	"github.com/gin-gonic/gin"
-	"gorm.io/gorm"
 	"strconv"
 )
 
-type Admin struct {
+type AdminRole struct {
 }
 
-//Detail 管理员
-// @Tags 管理员
-// @Summary 管理员详情
-// @Description 管理员详情
+//Detail 管理员角色
+// @Tags 管理员角色
+// @Summary 管理员角色详情
+// @Description 管理员角色详情
 // @Accept  json
 // @Produce  json
 // @Param id path int true "ID"
 // @Success 200 {object} response.Response
 // @Failure 500 {object} response.Response
-// @Router /admin/detail/{id} [get]
+// @Router /admin_role/detail/{id} [get]
 // @Security token
-func (ct *Admin) Detail(c *gin.Context) {
+func (ct *AdminRole) Detail(c *gin.Context) {
 	id := c.Param("id")
 	iid, _ := strconv.Atoi(id)
-	admin := service.AllService.AdminService.Info(uint(iid))
-	if admin.Id > 0 {
-		admin.Token = "" // 去掉token
-		response.Success(c, admin)
+	item := service.AllService.AdminRoleService.Info(uint(iid))
+	if item.Id > 0 {
+		response.Success(c, item)
 		return
 	}
 	response.Fail(c, 101, "信息不存在")
 	return
 }
 
-//Create 管理员
-// @Tags 管理员
-// @Summary 创建管理员
-// @Description 创建管理员
+//Create 管理员角色创建
+// @Tags 管理员角色
+// @Summary 管理员角色创建
+// @Description 管理员角色创建
 // @Accept  json
 // @Produce  json
-// @Param body body request.AdminForm true "管理员信息"
+// @Param body body request.AdminRoleForm true "管理员角色"
 // @Success 200 {object} response.Response
 // @Failure 500 {object} response.Response
-// @Router /admin/create [post]
+// @Router /admin_role/create [post]
 // @Security token
-func (ct *Admin) Create(c *gin.Context) {
-	f := &request.AdminForm{}
+func (ct *AdminRole) Create(c *gin.Context) {
+	f := &request.AdminRoleForm{}
 
 	if err := c.ShouldBindJSON(f); err != nil {
 		global.Logger.Error(err)
 		response.Fail(c, 101, "系统错误")
 		return
 	}
-	admin, err := service.AllService.AdminService.Create(f)
+	item, err := service.AllService.AdminRoleService.Create(f)
 	if err != nil {
 		response.Fail(c, 101, "创建失败")
 		return
 	}
-	response.Success(c, admin)
+	response.Success(c, item)
 }
 
 //List 列表
-// @Tags 管理员
-// @Summary 管理员列表
-// @Description 管理员列表
+// @Tags 管理员角色
+// @Summary 管理员角色列表
+// @Description 管理员角色列表
 // @Accept  json
 // @Produce  json
 // @Param page query int false "页码"
 // @Param page_size query int false "页大小"
-// @Param nickname query int false "昵称"
 // @Success 200 {object} response.Response
 // @Failure 500 {object} response.Response
-// @Router /admin/list [get]
+// @Router /admin_role/list [get]
 // @Security token
-func (ct *Admin) List(c *gin.Context) {
-	query := &request.AdminListQuery{}
+func (ct *AdminRole) List(c *gin.Context) {
+	query := &model.Pagination{}
 	if err := c.ShouldBindQuery(query); err != nil {
 		global.Logger.Error(err)
 		response.Fail(c, 101, "参数错误")
 		return
 	}
-	res := service.AllService.AdminService.List(query.Page, query.PageSize, func(tx *gorm.DB) {
-		if query.Nickname != "" {
-			tx.Where("nickname like ?", "%"+query.Nickname+"%")
-		}
-	})
+	res := service.AllService.AdminRoleService.List(uint(query.Page), uint(query.PageSize), nil)
 	response.Success(c, res)
 }
 
 //Update 编辑
-// @Tags 管理员
-// @Summary 管理员编辑
-// @Description 管理员编辑
+// @Tags 管理员角色
+// @Summary 管理员角色编辑
+// @Description 管理员角色编辑
 // @Accept  json
 // @Produce  json
-// @Param body body request.AdminForm true "管理员信息"
+// @Param body body request.AdminRoleForm true "管理员信息"
 // @Success 200 {object} response.Response
 // @Failure 500 {object} response.Response
-// @Router /admin/update [post]
+// @Router /admin_role/update [post]
 // @Security token
-func (ct *Admin) Update(c *gin.Context) {
-	f := &request.AdminForm{}
+func (ct *AdminRole) Update(c *gin.Context) {
+	f := &request.AdminRoleForm{}
 	if err := c.ShouldBindJSON(f); err != nil {
 		global.Logger.Error(err)
 		response.Fail(c, 101, "系统错误")
@@ -115,9 +109,9 @@ func (ct *Admin) Update(c *gin.Context) {
 		response.Fail(c, 101, errList[0])
 		return
 	}
-	admin := service.AllService.AdminService.Info(f.Id)
-	if admin.Id > 0 {
-		err := service.AllService.AdminService.Update(admin, f)
+	item := service.AllService.AdminRoleService.Info(f.Id)
+	if item.Id > 0 {
+		err := service.AllService.AdminRoleService.Update(item, f)
 		if err == nil {
 			response.Success(c, nil)
 			return
@@ -129,18 +123,18 @@ func (ct *Admin) Update(c *gin.Context) {
 }
 
 //Delete 删除
-// @Tags 管理员
-// @Summary 管理员删除
-// @Description 管理员编删除
+// @Tags 管理员角色
+// @Summary 管理员角色删除
+// @Description 管理员角色删除
 // @Accept  json
 // @Produce  json
-// @Param body body request.AdminForm true "管理员信息"
+// @Param body body model.AdminRole true "管理员角色信息"
 // @Success 200 {object} response.Response
 // @Failure 500 {object} response.Response
-// @Router /admin/delete [post]
+// @Router /admin_role/delete [post]
 // @Security token
-func (ct *Admin) Delete(c *gin.Context) {
-	f := &request.AdminForm{}
+func (ct *AdminRole) Delete(c *gin.Context) {
+	f := &model.AdminRole{}
 	if err := c.ShouldBindJSON(f); err != nil {
 		global.Logger.Error(err)
 		response.Fail(c, 101, "系统错误")
@@ -152,9 +146,9 @@ func (ct *Admin) Delete(c *gin.Context) {
 		response.Fail(c, 101, "参数错误")
 		return
 	}
-	admin := service.AllService.AdminService.Info(f.Id)
-	if admin.Id > 0 {
-		err := service.AllService.AdminService.Delete(admin)
+	item := service.AllService.AdminRoleService.Info(f.Id)
+	if item.Id > 0 {
+		err := service.AllService.AdminRoleService.Delete(item)
 		if err == nil {
 			response.Success(c, nil)
 			return
@@ -163,8 +157,4 @@ func (ct *Admin) Delete(c *gin.Context) {
 		return
 	}
 	response.Fail(c, 101, "信息不存在")
-}
-
-func (ct *Admin) Error(c *gin.Context) {
-	panic("测试")
 }
