# model/adminRole.go
@@ -2,7 +2,16 @@ package model
 
 type AdminRole struct {
 	Model
-	SeeCb  int      `json:"see_cb"`
+	Id     uint     `json:"id"`
+	SeeCb  uint     `json:"see_cb"`
 	Name   string   `json:"name"`
 	Admins []*Admin `gorm:"foreignKey:RoleId" json:"admins,omitempty"`
+}
+
+type AdminRoleList struct {
+	AdminRoles []*AdminRole `json:"list,omitempty"`
+}
+type AdminRoleListRes struct {
+	AdminRoleList
+	Pagination
 }
